# OmniXS

./: .gitignore  .gitmodules  EXAFS.py  LICENSE  README.md  TODO.md  cached_exafs.py  compare_utils.py  dataset  fft.py  main.py  optuna.sh  plot_EXAFS_peaks.py  plot_EXAFS_radial.py  plot_feature_complexity_pca.py  plot_model_perf_by_features.py  plot_pca_explained.py  plot_top_pred_comparisions.py  plot_universal_tl_model.py  pyproject.toml  requirements.yaml  rtml.md  run.sh  scratch.py  temp.py  todo.md  train.sh  train_all.sh  universal_TL_mses.py  xasmodels
cfg/: callbacks.yaml  cuda.yaml  data.yaml  debug.yaml  default.yaml  experiment.yaml  misc.yaml  model.yaml  mps.yaml  optuna.yaml  transformations.yaml
config/: callbacks.yaml  compounds.yaml  data.yaml  defaults.py  defaults.yaml  dscribe.yaml  experiment.yaml  hparams.yaml  model.yaml  optuna.yaml  paths.yaml  serialization.yaml  transformations.yaml
config/_legacy/: defaults.py  model.yaml
config/data/: default.yaml  transformations.yaml
doc/: workflow.md
examples/: making_split.py  sample.ipynb
install/: Dockerfile  Dockerfile.linux  Dockerfile.mac  README.md  install.sh  requirements_osx.yaml
omnixas/: __init__.py
omnixas/data/: xas.py  (+7 more)
omnixes/: README.md  __init__.py  data_processor.py  learn_from_xes_dataset.py  xes_data.py  xes_regressor.py
refactor/: MlData.py  io.py  new_ml_data.py  path.yaml  refactor_prelim.py  spectra_data.py  spectra_enums.py  utils.py
scripts/: alignment_sample.py  alignment_sample_Cu.py  compute_all_shifts.py  dtw_alignment.py  generate_tl_data.py  latex_baseline_table.py  legacy.py  pca_plots.py  pearson_shifts.py  plots_model_report.py  process_all_data.py  truncation_samples.py  vestige.py
src/: VASPDataModifier.py  VASPDataTransformationPlotter.py  ckpt_predictions.py  dataset.py  feff_data_transformations.py  model_report.py  models.py  pl_data.py  plot_mse_hist.py  plot_top_residues.py  plot_vasp_transormations.py  raw_data.py  raw_data_feff.py  raw_data_vasp.py  vasp_data_transformations.py  xas_data.py  xas_data_raw.py
tests/: test_FileHandler.py  test_MLData.py  test_MLSplits.py  test_Material.py  test_Site.py  test_Spectrum.py  test_datamodule.py  test_feff_data_raw.py  test_pl_data.py  test_utils.py  test_xas_data.py
(+200 files in other folders)
